offline storage fix & threshold rework

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,6 @@
     <color name="orange">#FF9800</color>
     <color name="yellow">#FFEB3B</color>
     <color name="light_green">#CDDC39</color>
-    <color name="dark_green">#4CAF50</color>
+    <color name="dark_green">#4CFF50</color>
     <color name="ostros">#A6000000</color>
 </resources>
